--- a/KosaESS/src/main/resources/static/css/student/mypage.css
+++ b/KosaESS/src/main/resources/static/css/student/mypage.css
@@ -13,6 +13,10 @@
 	align-items: center;
 }
 
+.listHead  p {
+	font-weight: 500;
+}
+
 h3 {
 	margin: 0;
 	font-size: 20px;
@@ -394,15 +398,53 @@ td button {
 	list-style: none;
 	border: #0E5881;
 	border-style: solid;
-	background: #E7EFF3;
+	background: #F3F6F8;
 	padding: 0;
+	text-align: left;
+	padding: 1%;
+	border-top: 0;
 }
 
 .reply li {
 	padding: 1%;
-	border-bottom: 1px solid #0E5881;
+}
+
+.reply li:not(:first-child) {
+	border-top: 1px solid black;
 }
 
 .reply span {
 	padding-left: 2%;
+}
+
+.paging {
+	width: 90%;
+	margin: auto;
+	margin-top: 1%;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+.paging i {
+	font-size: 15px;
+	border: black;
+}
+
+.pages span {
+	margin: 5px 10px;
+	font-size: 22px;
+	border: black;
+	padding: 5px 12px;
+	font-weight: bold;
+	cursor: pointer;
+}
+
+.pages {
+	align-items: center;
+	display: flex;
+}
+
+.paging .active {
+	background: #E7EFF3;
 }
