--- a/KosaESS/src/main/resources/templates/include/student_footer.html
+++ b/KosaESS/src/main/resources/templates/include/student_footer.html
@@ -34,7 +34,7 @@
 				<div class="emailJoin">
 					<label for="email"
 						style="padding-bottom: 20%; color: #E7EFF3; font-weight: bold; font-size: 18px;">협회
-						소식을 받아보새요.</label> <input type="email" value="이메일을 입력하세요." id="email"
+						소식을 받아보새요.</label> <input type="email" placeholder="이메일을 입력하세요." id="email"
 						style="width: 80%;">
 					<button type="submit">구독하기</button>
 				</div>
