[eunji][#update] 강의/ 과목 일괄 수정 구현 완료

--- a/KosaESS/src/main/resources/templates/admin/class_form.html
+++ b/KosaESS/src/main/resources/templates/admin/class_form.html
@@ -257,9 +257,9 @@
 										placeholder="최대 99,999,999원" maxlength="10"> <input
 										th:if="${act}=='update'" class="subsidy" type="text"
 										style="width: 100%;" th:name="clssSubsidy"
-										th:value="${classVO.clssSubsidy}" maxlength="10"> <span
+										th:value="${classVO.sSubsidy}" maxlength="10"> <span
 										class="span_subsidy" th:if="${act}=='select'"
-										th:text="${classVO.clssSubsidy}"></span>
+										th:text="${classVO.sSubsidy}"></span>
 								</div>
 							</div>
 						</div>
