--- a/KosaESS/src/main/resources/static/css/admin/lecture_list.css
+++ b/KosaESS/src/main/resources/static/css/admin/lecture_list.css
@@ -175,7 +175,7 @@
 	text-align: right;
 }
 
-.td_professor_check_box, .td_professor_num, .td_professor_name, .td_professor_tel {
+.td_professor_check_box, .td_professor_num, .td_professor_nm, .td_professor_tel {
 	text-align: center;
 }
 
