--- a/KosaESS/src/main/resources/templates/student/class_list.html
+++ b/KosaESS/src/main/resources/templates/student/class_list.html
@@ -88,12 +88,12 @@
 									<div class="modalContent">
 										<div class="upload-area">
 											<p>지원서파일을 여기에 첨부하세요.</p>
-											<p style="color: red;">※ pdf형식의 파일만 첨부 가능합니다 ※</p>
+											<p style="color: red;">※ pdf형식의 파일만 첨부 가능합니다(1개) ※</p>
 											<div style="width: 80%;">
 												<input class="upload-name" value="선택된 첨부파일이 없습니다"
 													placeholder="선택된 첨부파일이 없습니다" readonly> <label
 													for="fileInput">파일찾기</label> <input type="file" name="file"
-													id="fileInput" class="fileInput" multiple accept=".pdf">
+													id="fileInput" class="fileInput" accept=".pdf">
 											</div>
 										</div>
 									</div>
@@ -169,5 +169,30 @@
 		</div>
 	</div>
 </body>
+<script>
+	var button = document.querySelector(".aplyBtn");
+
+	// 클릭 이벤트를 감지합니다.
+	button.addEventListener("click", function(event) {
+		// 버튼이 disabled 상태인 경우에만 알림을 띄웁니다.
+		var x = document.getElementById("fileInput");
+		var selectedFiles = x.files;
+		if (selectedFiles.length < 1) {
+			alert("지원서 파일을 첨부해주세요.");
+			event.preventDefault();
+		}
+	});
+	$("#fileInput").on('change', function() {
+		var files = $("#fileInput")[0].files;
+		var fileNames = [];
+
+		for (var i = 0; i < files.length; i++) {
+			fileNames.push(files[i].name);
+		}
+
+		var fileNameString = fileNames.join(', ');
+		$(".upload-name").val(fileNameString);
+	});
+</script>
 <script src="/js/student/class_list.js"></script>
 </html>
