[eunji][#pdate]기준정보 관리 구현 완료

--- a/KosaESS/src/main/resources/templates/admin/applicant_list.html
+++ b/KosaESS/src/main/resources/templates/admin/applicant_list.html
@@ -193,7 +193,7 @@ document.addEventListener("DOMContentLoaded", function () {
 
     form.addEventListener("submit", function (event) {
     	//checked되어 있는 input들 선택
-        const checkboxes = document.querySelectorAll('input[type="checkbox"][name="chk"]:checked');
+        const checkboxes = document.querySelectorAll('input[type="checkbox"][name="select"]:checked');
         
     	//만약 아무것도 선택되어있지 않다면
         if (checkboxes.length === 0) {
