--- a/KosaESS/src/main/resources/templates/admin/commoncode_list.html
+++ b/KosaESS/src/main/resources/templates/admin/commoncode_list.html
@@ -37,27 +37,25 @@
 					<!-- 총 개수 및 버튼-->
 					<div class="content_info_wrap">
 						<div>
-							공통코드 총 <span class="cnt" th:text="${#lists.size(groupCodeList)}"></span>
+							공통코드 총 <span class="cnt group_cnt" th:text="${#lists.size(groupCodeList)}"></span>
 							건
 						</div>
 						<div class="content_info_btn_wrap">
 							<button id="group_delete_btn">
 								<img th:src="@{/img/minus_white.png}">선택삭제
 							</button>
-							
+
 							<button id="group_update_btn" onclick="enterGroupEditMode()">
-								<img th:src="@{/img/update_white.png}">
-								<span>수정하기</span>
+								<img th:src="@{/img/update_white.png}"> <span>수정하기</span>
 							</button>
-							
-							<button id="group_cancel_btn" onclick="cancelGroupEditMode()" style="display:none;">
-								<img th:src="@{/img/x_white.png}">
-								<span>수정취소</span>
+
+							<button id="group_cancel_btn" onclick="cancelGroupEditMode()"
+								style="display: none;">
+								<img th:src="@{/img/x_white.png}"> <span>수정취소</span>
 							</button>
-							
-							<button id="group_save_btn" style="display:none;">
-								<img th:src="@{/img/save_white.png}">
-								<span>저장하기</span>
+
+							<button id="group_save_btn" onclick ="saveGroupCode()" style="display: none;">
+								<img th:src="@{/img/save_white.png}"> <span>저장하기</span>
 							</button>
 						</div>
 					</div>
@@ -66,9 +64,10 @@
 					<!-- 그룹코드 등록하기 -->
 					<div class="insert_lecture insert" style="padding: 5px;">
 						<div>
-							<span>코드구분<span class="red">*</span></span> <input type="text" class="group_code_tpcd_id"
-								placeholder="ex)NTC" maxlength="3"> <span>코드구분명<span class="red">*</span></span> <input
-								type="text" class="group_code_cmcd_nm" placeholder="ex)ㅇㅇㅇㅇ상태">
+							<span>코드구분<span class="red">*</span></span> <input type="text"
+								class="group_code_tpcd_id" placeholder="ex)NTC" maxlength="3">
+							<span>코드구분명<span class="red">*</span></span> <input type="text"
+								class="group_code_cmcd_nm" placeholder="ex)ㅇㅇㅇㅇ상태">
 						</div>
 						<div>
 							<button class="insert_btn" type="button"
@@ -83,8 +82,9 @@
 						<table>
 							<thead>
 								<tr class="content_list_th">
-									<th style="width: 5%;"><input type="checkbox" onclick="groupSelectAll(this)"
-										id="groupChkAll" name="group_select_all" class="lecture_checkbox_all"></th>
+									<th style="width: 5%;"><input type="checkbox"
+										onclick="groupSelectAll(this)" id="groupChkAll"
+										name="group_select_all" class="lecture_checkbox_all"></th>
 									<th style="width: 10%;">번호</th>
 									<th style="width: 25%;">공통코드ID</th>
 									<th style="width: 25%;">코드구분</th>
@@ -92,30 +92,31 @@
 									<th style="width: 10%;">사용여부</th>
 								</tr>
 							</thead>
-							<tbody>
+							<tbody class="group_tbody">
 								<tr th:each="groupCode,iterStat : ${groupCodeList}">
-									<td class="td_group_check_box"><input type="checkbox" onclick="groupCheckSelectAll()"
-										class="group_chk" name="group_select"
-										th:value="${groupCode.cmcdId}">
-										<input type="hidden" class="group_update_yn" value="N">	
-									</td>
+									<td class="td_group_check_box"><input type="checkbox"
+										onclick="groupCheckSelectAll()" class="group_chk group_checkbox_item"
+										name="group_select" th:value="${groupCode.cmcdId}"> <input
+										type="hidden" class="group_update_yn" value="N"></td>
 									<td class="td_num" th:text="${iterStat.index + 1}"></td>
 									<td class="td_cmcd_id"><div onclick="detailCodeList(this)"
 											class="group_code_id" th:text="${groupCode.cmcdId}"></div></td>
 									<td class="td_tpcd_id">
-										<div class="group_div" th:text="${groupCode.tpcdId}"></div>
-										<input class="group_input group_tpcd_id" type="text" th:value="${groupCode.tpcdId}" style="display: none;">
+										<div class="group_div" th:text="${groupCode.tpcdId}"></div> <input
+										class="group_input group_tpcd_id" type="text"
+										th:value="${groupCode.tpcdId}" style="display: none;">
 									</td>
 									<td class="td_cmcd_nm">
-										<div class="group_div" th:text="${groupCode.cmcdNm}"></div>
-										<input class="group_input group_cmcd_nm" type="text" th:value="${groupCode.cmcdNm}" style="display: none;">
+										<div class="group_div" th:text="${groupCode.cmcdNm}"></div> <input
+										class="group_input group_cmcd_nm" type="text"
+										th:value="${groupCode.cmcdNm}" style="display: none;">
 									</td>
-									<td class="td_use_yn" >
-										<div class="group_div" th:text="${groupCode.useYn}"></div>
-										<select class="group_input group_use_yn" style="display:none;">
+									<td class="td_use_yn">
+										<div class="group_div" th:text="${groupCode.useYn}"></div> <select
+										class="group_input group_use_yn" style="display: none;">
 											<option value="Y" th:selected="${groupCode.useYn == 'Y'}">Y</option>
 											<option value="N" th:selected="${groupCode.useYn == 'N'}">N</option>
-										</select>
+									</select>
 									</td>
 								</tr>
 							</tbody>
@@ -139,23 +140,24 @@
 								th:text="${#lists.size(detailCodeList)}">0</span> 건
 						</div>
 						<div class="content_info_btn_wrap">
-							<button type="button" id="detail_delete_btn" style="display:none;"> 
+							<button type="button" id="detail_delete_btn"
+								style="display: none;">
 								<img th:src="@{/img/minus_white.png}">선택삭제
 							</button>
-							
-							<button id="detail_update_btn" onclick="enterDetailEditMode()" style="display:none;">
-								<img th:src="@{/img/update_white.png}">
-								<span>수정하기</span>
+
+							<button id="detail_update_btn" onclick="enterDetailEditMode()"
+								style="display: none;">
+								<img th:src="@{/img/update_white.png}"> <span>수정하기</span>
 							</button>
-							
-							<button id="detail_cancel_btn" onclick ="cancelDetailEditMode()" style="display:none;">
-								<img th:src="@{/img/x_white.png}">
-								<span>수정취소</span>
+
+							<button id="detail_cancel_btn" onclick="cancelDetailEditMode()"
+								style="display: none;">
+								<img th:src="@{/img/x_white.png}"> <span>수정취소</span>
 							</button>
-							
-							<button id="detail_save_btn" style="display:none;">
-								<img th:src="@{/img/save_white.png}">
-								<span>저장하기</span>
+
+							<button id="detail_save_btn" onclick="saveDetailCode()"
+								style="display: none;">
+								<img th:src="@{/img/save_white.png}"> <span>저장하기</span>
 							</button>
 						</div>
 					</div>
@@ -164,12 +166,13 @@
 					<!-- 상세코드 등록하기 -->
 					<div class="insert_lecture insert" style="padding: 5px;">
 						<div>
-							<span>공통코드<span class="red">*</span></span> <select id="group_code_select">
+							<span>공통코드<span class="red">*</span></span> <select
+								id="group_code_select">
 								<option value="all">선택</option>
 								<option th:each="groupCode: ${groupCodeList}"
 									th:value="${groupCode.cmcdId}" th:text="${groupCode.cmcdNm}"></option>
-							</select> <span>상세코드명<span class="red">*</span></span> <input class="detailCmcdNm" type="text"
-								placeholder="상세코드명">
+							</select> <span>상세코드명<span class="red">*</span></span> <input
+								class="detailCmcdNm" type="text" placeholder="상세코드명">
 						</div>
 						<div>
 							<button class="insert_btn" type="button"
@@ -189,7 +192,8 @@
 								class="detail_code_table">
 								<thead>
 									<tr class="content_list_th">
-										<th style="width: 10%;"><input type="checkbox" name="detail_select_all" onclick="detailSelectAll(this)"
+										<th style="width: 10%;"><input type="checkbox"
+											name="detail_select_all" onclick="detailSelectAll(this)"
 											id="detailChkAll"></th>
 										<th style="width: 10%;">번호</th>
 										<th style="width: 30%;">상세코드ID</th>
@@ -410,6 +414,162 @@
 		
 		
 		/*
+		*그룹코드 리스트 뿌리기
+		*/
+		function selectGroupCodeList(){
+			//버튼 보이게 하기
+			const deleteBtn = document.querySelector('#group_delete_btn');
+	        const updateBtn = document.querySelector('#group_update_btn');
+	        const cancelBtn = document.querySelector('#group_cancel_btn');
+	        const saveBtn = document.querySelector('#group_save_btn');
+
+	        //버튼 display 수정
+	        deleteBtn.style.display = 'flex';
+	        updateBtn.style.display = 'flex';
+	        cancelBtn.style.display = 'none';
+	        saveBtn.style.display = 'none';
+	        
+	        $.ajax({
+	        	url: '/admin/commoncode/getgroupcodelist',
+	        	method: 'GET',
+	        	success: function(response){
+	        		var groupCodeList = response;
+	        		
+	        		//그룹코드 개수 재설정
+	        		var groupCnt = document.querySelector('.group_cnt');
+	        		groupCnt.textContent = groupCodeList.length;
+	        		
+	        		//테이블 비우고 다시 넣기
+	        		var groupTbody = document.querySelector('.group_tbody');
+	        		$('.group_tbody').empty();
+	        		
+	        		for(var i=0; i<groupCodeList.length; i++){
+	        			var groupCode = groupCodeList[i];
+	        			
+	        			var tr = document.createElement('tr');
+	        			
+	        			//체크박스
+	        			var tdCheck = document.createElement('td');
+	        			tdCheck.className="td_group_check_box";
+	        			var inputCheck = document.createElement('input');
+	        			inputCheck.type="checkbox";
+	        			inputCheck.onclick=function(){
+	        				groupCheckSelectAll();
+	        			}
+	        			inputCheck.className = "group_chk group_checkbox_item";
+	        			inputCheck.name ='group_select';
+	        			inputCheck.value=groupCode.cmcdId;
+	        			var inputHidden = document.createElement('input');
+	        			inputHidden.type="hidden";
+	        			inputHidden.className='group_update_yn';
+	        			inputHidden.value="N";
+	        			tdCheck.appendChild(inputCheck);
+	        			tdCheck.appendChild(inputHidden);
+	        			tr.appendChild(tdCheck);
+	        			
+	        			//번호
+	        			var tdNum = document.createElement('td');
+	        			tdNum.className="td_num";
+	        			tdNum.textContent = i+1;
+	        			tr.appendChild(tdNum);
+	        			
+	        			//공통코드ID
+	        			var tdCmcdId = document.createElement('td');
+	        			tdCmcdId.className = 'td_cmcd_id';
+	        			var divCmcdId = document.createElement('div');
+	        			divCmcdId.className = 'group_code_id';
+	        			divCmcdId.onclick = 'detailCodeList(this)';
+	        			divCmcdId.textContent = groupCode.cmcdId;
+	        			tdCmcdId.appendChild(divCmcdId);
+	        			tr.appendChild(tdCmcdId);
+	        			
+	        			//tpcdId
+	        			var tdTpcdId = document.createElement('td');
+	        			tdTpcdId.className ='td_tpcd_id';
+	        			var divTpcdId = document.createElement('div');
+	        			divTpcdId.className="group_div";
+	        			divTpcdId.textContent = groupCode.tpcdId;
+	        			var inputTpcdId = document.createElement('input');
+	        			inputTpcdId.className='group_input group_tpcd_id';
+	        			inputTpcdId.type="text";
+	        			inputTpcdId.value= groupCode.tpcdId;
+	        			inputTpcdId.style.display='none';
+	        			tdTpcdId.appendChild(divTpcdId);
+	        			tdTpcdId.appendChild(inputTpcdId);
+	        			tr.appendChild(tdTpcdId);
+	        			
+	        			//cmcdNm
+	        			var tdCmcdNm = document.createElement('td');
+	        			tdCmcdNm.className='td_cmcd_nm';
+	        			var divCmcdNm = document.createElement('div');
+	        			divCmcdNm.className='group_div';
+	        			divCmcdNm.textContent=groupCode.cmcdNm;
+	        			var inputCmcdNm = document.createElement('input');
+	        			inputCmcdNm.className='group_input group_cmcd_nm';
+	        			inputCmcdNm.type="text";
+	        			inputCmcdNm.value=groupCode.cmcdNm;
+	        			inputCmcdNm.style.display='none';
+	        			tdCmcdNm.appendChild(divCmcdNm);
+	        			tdCmcdNm.appendChild(inputCmcdNm);
+	        			tr.appendChild(tdCmcdNm);
+	        			
+	        			//useYn
+	        			var tdUseYn = document.createElement('td');
+	        			tdUseYn.className='td_use_yn';
+	        			var divUseYn = document.createElement('div');
+	        			divUseYn.className='group_div';
+	        			divUseYn.textContent = groupCode.useYn;
+	        			var selectUseYn = document.createElement('select');
+	        			selectUseYn.className='group_input group_use_yn';
+	        			selectUseYn.style.display = 'none';
+	        			var optionY = document.createElement('option');
+	        			optionY.value='Y';
+	        			optionY.textContent = 'Y';
+	        			var optionX = document.createElement('option');
+	        			optionY.value='X';
+	        			optionY.textContent = 'X';
+	        			selectUseYn.appendChild(optionY);
+	        			selectUseYn.appendChild(optionX);
+	        			selectUseYn.value=groupCode.useYn;
+	        			tdUseYn.appendChild(divUseYn);
+	        			tdUseYn.appendChild(selectUseYn);
+	        			tr.appendChild(tdUseYn);
+	        			
+	        			groupTbody.appendChild(tr);
+	        		}
+	        		
+	        		
+	        		//상세코드 등록에 필요한 그룹코드 select 다시 불러오기
+	        		var groupCodeSelect = document.querySelector('#group_code_select');
+	        		$('#group_code_select').empty();
+	        		
+	        		//선택option
+	        		var optionDefault = document.createElement('option');
+	        		optionDefault.value = 'all';
+	        		optionDefault.textContent ='선택';
+	        		groupCodeSelect.appendChild(optionDefault);
+	        		
+	        		
+	        		for(var i =0; i<groupCodeList.length; i++){
+	        			var groupCode = groupCodeList[i];
+	        			
+	        			var optionGroup = document.createElement('option');
+	        			optionGroup.value = groupCode.cmcdId;
+	        			optionGroup.textContent = groupCode.cmcdNm;
+	        			groupCodeSelect.appendChild(optionGroup);
+	        								
+	        		}
+	        	}
+	        });
+		}
+		
+		
+		
+		
+		
+		
+		
+		/*
 		*그룹코드에 맞는 상세코드 리스트 뿌리기
 		*/
 		
@@ -468,8 +628,9 @@
 									// <td> 요소 생성 및 추가 (이 부분을 detailCode 객체의 필드에 따라 조정)
 									var td1 = document.createElement("td");
 									td1.className = "td_detail_check_box";
-									td1.innerHTML = '<input type="checkbox" name="detail_select" onclick ="detailCheckSelectAll()" class="detail_chk" value="' + detailCode.cmcdId + '">'+
-													'<input type="hidden" class="detail_update_yn" value="N">';
+									td1.innerHTML = '<input type="checkbox" name="detail_select" onclick ="detailCheckSelectAll()" class="detail_chk detail_checkbox_item" value="' + detailCode.cmcdId + '">'+
+													'<input type="hidden" class="detail_update_yn" value="N">'+
+													'<input type="hidden" class="detail_tpcd_id" value="'+detailCode.tpcdId+'">';
 
 									var tdNum = document.createElement("td");
 									tdNum.className="td_num";
@@ -480,6 +641,7 @@
 									td2.innerHTML = detailCode.cmcdId;
 
 									var td3 = document.createElement("td");
+									td3.className = "td_cmcd_nm"
 									td3.innerHTML = '<div class="detail_div">'
 											+ detailCode.cmcdNm
 											+ '</div><input class="detail_input detail_cmcd_nm" type="text" value="' + detailCode.cmcdNm + '" style="display: none;">';
@@ -723,6 +885,128 @@
 	*	저장하기 이벤트
 	*/
 	//그룹코드 저장하기 버튼 클릭
+	function saveGroupCode(){
+		//수정된 상세코드 리스트를 담을 배열 선언
+		var updateGroupList = [];
+		
+		//한 행씩 딕셔너리 만들어서 배열에 넣기
+		var hiddenInputs = document.querySelectorAll('tr .td_group_check_box .group_update_yn[value=Y]');
+		hiddenInputs.forEach((hiddenInput)=>{
+			//수정된 상세코드 객체를 담을 딕셔너리 선언
+			var groupCode = {};
+			
+			//updateYn = 'Y'인 인풋의 부모 tr찾기
+			var parentTr = hiddenInput.closest('tr');
+			
+			//id와 수정가능한 input의 값들 뽑기
+			var cmcdId = parentTr.querySelector('.td_group_check_box .group_checkbox_item').value;
+			var tpcdId = parentTr.querySelector('.td_tpcd_id .group_tpcd_id').value;
+			var cmcdNm = parentTr.querySelector('.td_cmcd_nm .group_cmcd_nm').value;
+			var useYn = parentTr.querySelector('.td_use_yn .group_use_yn').value;
+			
+			//딕셔너리의 키값에 값 넣기
+			groupCode['cmcdId'] = cmcdId;
+			groupCode['tpcdId'] = tpcdId;
+			groupCode['cmcdNm'] = cmcdNm;
+			groupCode['useYn'] = useYn;
+						
+			//배열에 push하기
+			updateGroupList.push(groupCode);
+		});
+		
+		//객체 배열을 json문자열로 직렬화 하기
+		var jsonData = JSON.stringify(updateGroupList);
+		
+		//비동기로 배열 전달하기
+		fetch('/admin/commoncode/update/groupcode', {
+    		method: 'POST',
+    		headers: {
+        		'Content-Type': 'application/json',
+    		},
+    		body: jsonData,
+		})
+		.then(response =>response.json())
+		.then(data => {
+			console.log(data);
+			if (data.message === "success") {
+		        alert("그룹코드가 수정되었습니다.");
+		        //그룹코드리스트 다시 불러오기
+		        selectGroupCodeList();
+		        
+		    } else {
+		    	alert("실패했습니다. 다시 시도해주세요.");
+		    }
+		})
+		.catch(error => {
+    		// 오류 처리
+		});
+	}
+	
+	//상세코드 저장하기 버튼 클릭
+	function saveDetailCode(){		
+		var groupCmcdId;
+		
+		//수정된 상세코드 리스트를 담을 배열 선언
+		var updateDetailList = [];
+		
+		//한 행씩 딕셔너리 만들어서 배열에 넣기
+		var hiddenInputs = document.querySelectorAll('tr .td_detail_check_box .detail_update_yn[value=Y]');
+		hiddenInputs.forEach((hiddenInput)=>{
+			//수정된 상세코드 객체를 담을 딕셔너리 선언
+			var detailCode = {};
+			
+			//updateYn = 'Y'인 인풋의 부모 tr찾기
+			var parentTr = hiddenInput.closest('tr');
+			
+			//id와 수정가능한 input의 값들 뽑기
+			var cmcdId = parentTr.querySelector('.td_detail_check_box .detail_checkbox_item').value;
+			var cmcdNm = parentTr.querySelector('.td_cmcd_nm .detail_cmcd_nm').value;
+			var cmcdOrder = parentTr.querySelector('.td_order .detail_cmcd_order').value;
+			var useYn = parentTr.querySelector('.td_use_yn .detail_use_yn').value;
+			var tpcdId = parentTr.querySelector('.td_detail_check_box .detail_tpcd_id').value;
+			
+			groupCmcdId = tpcdId;
+			
+			//딕셔너리의 키값에 값 넣기
+			detailCode['cmcdId'] = cmcdId;
+			detailCode['cmcdNm'] = cmcdNm;
+			detailCode['cmcdOrder'] = cmcdOrder;
+			detailCode['useYn'] = useYn;
+						
+			//배열에 push하기
+			updateDetailList.push(detailCode);
+		});
+			
+			//객체 배열을 json문자열로 직렬화 하기
+			var jsonData = JSON.stringify(updateDetailList);
+			
+			console.log(jsonData);
+			
+			//비동기로 배열 전달하기
+			fetch('/admin/commoncode/update/detailcode', {
+	    		method: 'POST',
+	    		headers: {
+	        		'Content-Type': 'application/json',
+	    		},
+	    		body: jsonData,
+			})
+			.then(response =>response.json())
+			.then(data => {
+				console.log(data);
+				if (data.message === "success") {
+			        alert("상세코드가 수정되었습니다.");
+			        //그룹코드에 맞는 해당 리스트 다시 불러오기
+			        
+			        console.log(groupCmcdId);
+			        selectDetailCodeList(groupCmcdId);
+			    } else {
+			    	alert("실패했습니다. 다시 시도해주세요.");
+			    }
+			})
+			.catch(error => {
+	    		// 오류 처리
+			});
+	}
 	
 	</script>
 </body>
