--- a/KosaESS/src/main/resources/static/css/manager/manager_main.css
+++ b/KosaESS/src/main/resources/static/css/manager/manager_main.css
@@ -1,17 +1,11 @@
-.home-section {
-	position: relative;
-	background: #ffff;
-	min-height: 100vh;
-	top: 0;
-	left: 60px;
-	width: calc(100% - 60px);
-	transition: all 0.5s ease;
-	z-index: 2;
+.area_test {
+	border:1px black solid;
 }
 
-.sidebar.open ~ .home-section {
-	left: 250px;
-	width: calc(100% - 250px);
+.content_wrap {
+	margin: 18px;
+	border:1px black solid;
+	display: flex;
 }
 
 .home-section .title {
@@ -19,153 +13,5 @@
 	color: #333333;
 	font-size: 30px;
 	font-weight: bold;
-	margin: 40px;
-}
-
-.content_wrap {
-	margin: 18px;
-}
-
-.bx_wait_wrap {
-	display:flex;
-}
-
-.bx_wait_wrap .bx_wait {
-	border:2px solid black;
-	width: 40%;
-	height: 300px;
-	margin:20px;
-	padding: 20px;
-	text-align: center;
-	font-weight:bold;
-}
-
-.bx_wait_wrap .bx_wait .bx_wait_sub_title {
-	font-size: 30px;
-	margin:auto;
-}
-
-.bx_wait_wrap .bx_wait .bx_wait_content .total_cnt{
-	margin-top:10px;
-	font-size: 20px;
-	text-align: center;
-	
-}
-.bx_wait_wrap .bx_wait .bx_wait_content .total_cnt a {
-	text-decoration: none;
-}
-
-.bx_wait_wrap .bx_wait .bx_wait_content .total_cnt a .cnt {
-	font-size: 100px;
-	color: #0E5881;
-}
-
-.row {
-	margin: 15px;
-	height: 350px;
-	display: block;
-}
-
-.row .col {
-	width: 25%;
-	float:left;
-	padding: 0 15px 0 15px;
-	margin-bottom: 30px;
-}
-
-.bg-aqua {
-	background: #00c0ef;
-}
-
-.bg-green {
-	background: #00a65a;
-}
-
-.bg-yellow {
-	background: #f39c12;
-}
-
-.bg-red {
-	background: #dd4b39;
-}
-
-.bg-box {
-	background: #9FBCCD;
-}
-
-.small-box {
-	border-radius: 3px;
-	box-shadow: 1px 1px 3px lightgray;
-}
-
-.small-box > .inner {
-    padding: 10px;
-    color: white;
-    width:70%;
-}
-
-.small-box-top {
-	display: flex;
-}
-
-.small-box h3 {
-    font-size: 38px;
-    font-weight: bold;
-    margin: 0 0 10px 0;
-    white-space: nowrap;
-    padding: 0;
-}
-
-.small-box p {
-    font-size: 15px;
-}
-
-.small-box .icon {
-	width: 30%;
-    transition: all .3s linear;
-    top: -10px;
-    right: 10px;
-    z-index: 0;
-    font-size: 90px;
-    color: rgba(0,0,0,0.15);
-}
-
-.small-box>.small-box-footer {
-    position: relative;
-    text-align: center;
-    padding: 3px 0;
-    color: #fff;
-    color: rgba(255,255,255,0.8);
-    display: block;
-    z-index: 10;
-    background: rgba(0,0,0,0.1);
-    text-decoration: none;
-    border-radius: 0 0 3px 3px;
-}
-
-.small-box>.small-box-footer:hover {
-    color: #fff;
-    background: rgba(0,0,0,0.15);
-}
-
-.section_wrap {
-	margin: 30px;
-}
-
-.left_section {
-	width: 55%;
-	float:left;
-}
-
-.right_section {
-	width: 41%;
-	float: right;
-}
-
-
-.section_content {
-	width: 100%;
-	height: 300px;
-	background: #ECF0F5;
-	margin: 15px 0 15px 0;
+	margin : 40px;
 }
